using log-Cholesky for Covariance-matrices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,27 @@
-useDynLib(psydiff, .registration=TRUE)
-importFrom(Rcpp, evalCpp)
-## export all regularly named functions
-## (but allow for private functions whose name starts with a dot).name <- function(...)
+export(GIST)
+export(compileModel)
+export(compileParallelGradients)
+export(extractOptimx)
+export(getDataTemplate)
+export(getGradientsParallel)
+export(getStandardErrors)
+export(newPsydiff)
+export(psydiffDEoptim)
+export(psydiffFitInternal)
+export(psydiffGradientsInternal)
+export(psydiffNLopt)
+export(psydiffOptimBFGS)
+export(psydiffOptimNelderMead)
+export(psydiffOptimx)
+export(psydiffSubplex)
+export(simulateData)
+export(stopParallelGradients)
+import(DEoptim)
+import(Rcpp)
+import(nloptr)
+import(optimx)
+import(stringr)
+import(subplex)
+importFrom(Rcpp,sourceCpp)
 exportPattern("^[[:alpha:]]+")
+useDynLib(psydiff, .registration = TRUE)
